@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,42 +25,50 @@
  * @test
  * @summary Test Future's default methods
  * @library ../lib
- * @run testng DefaultMethods
+ * @run junit DefaultMethods
  */
 
-import java.util.concurrent.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.Future;
+import java.util.stream.Stream;
 import static java.util.concurrent.Future.State.*;
 
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
-import static org.testng.Assert.*;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import static org.junit.jupiter.api.Assertions.*;
 
-public class DefaultMethods {
+class DefaultMethods {
 
-    @DataProvider(name = "executors")
-    public Object[][] executors() {
-        return new Object[][] {
-            // ensures that default implementation is tested
-            { new DelegatingExecutorService(Executors.newCachedThreadPool()), },
+    static Stream<ExecutorService> executors() {
+        return Stream.of(
+                // ensures that default close method is tested
+                new DelegatingExecutorService(Executors.newCachedThreadPool()),
 
-            // executors that may return a Future that overrides the methods
-            { new ForkJoinPool(), },
-            { Executors.newCachedThreadPool(), }
-        };
+                // executors that may return a Future that overrides the methods
+                Executors.newCachedThreadPool(),
+                Executors.newVirtualThreadPerTaskExecutor(),
+                new ForkJoinPool()
+        );
     }
 
     /**
      * Test methods when the task has not completed.
      */
-    @Test(dataProvider = "executors")
-    public void testRunningTask(ExecutorService executor) {
+    @ParameterizedTest
+    @MethodSource("executors")
+    void testRunningTask(ExecutorService executor) {
         try (executor) {
             var latch = new CountDownLatch(1);
             Future<?> future = executor.submit(() -> { latch.await(); return null; });
             try {
                 assertTrue(future.state() == RUNNING);
-                expectThrows(IllegalStateException.class, future::resultNow);
-                expectThrows(IllegalStateException.class, future::exceptionNow);
+                assertThrows(IllegalStateException.class, future::resultNow);
+                assertThrows(IllegalStateException.class, future::exceptionNow);
             } finally {
                 latch.countDown();
             }
@@ -70,41 +78,44 @@ public class DefaultMethods {
     /**
      * Test methods when the task has already completed with a result.
      */
-    @Test(dataProvider = "executors")
-    public void testCompletedTask1(ExecutorService executor) {
+    @ParameterizedTest
+    @MethodSource("executors")
+    void testCompletedTask1(ExecutorService executor) {
         try (executor) {
             Future<String> future = executor.submit(() -> "foo");
             awaitDone(future);
             assertTrue(future.state() == SUCCESS);
-            assertEquals(future.resultNow(), "foo");
-            expectThrows(IllegalStateException.class, future::exceptionNow);
+            assertEquals("foo", future.resultNow());
+            assertThrows(IllegalStateException.class, future::exceptionNow);
         }
     }
 
     /**
      * Test methods when the task has already completed with null.
      */
-    @Test(dataProvider = "executors")
-    public void testCompletedTask2(ExecutorService executor) {
+    @ParameterizedTest
+    @MethodSource("executors")
+    void testCompletedTask2(ExecutorService executor) {
         try (executor) {
             Future<String> future = executor.submit(() -> null);
             awaitDone(future);
             assertTrue(future.state() == SUCCESS);
-            assertEquals(future.resultNow(), null);
-            expectThrows(IllegalStateException.class, future::exceptionNow);
+            assertNull(future.resultNow());
+            assertThrows(IllegalStateException.class, future::exceptionNow);
         }
     }
 
     /**
      * Test methods when the task has completed with an exception.
      */
-    @Test(dataProvider = "executors")
-    public void testFailedTask(ExecutorService executor) {
+    @ParameterizedTest
+    @MethodSource("executors")
+    void testFailedTask(ExecutorService executor) {
         try (executor) {
             Future<?> future = executor.submit(() -> { throw new ArithmeticException(); });
             awaitDone(future);
             assertTrue(future.state() == FAILED);
-            expectThrows(IllegalStateException.class, future::resultNow);
+            assertThrows(IllegalStateException.class, future::resultNow);
             Throwable ex = future.exceptionNow();
             assertTrue(ex instanceof ArithmeticException);
         }
@@ -113,16 +124,17 @@ public class DefaultMethods {
     /**
      * Test methods when the task has been cancelled (mayInterruptIfRunning=false)
      */
-    @Test(dataProvider = "executors")
-    public void testCancelledTask1(ExecutorService executor) {
+    @ParameterizedTest
+    @MethodSource("executors")
+    void testCancelledTask1(ExecutorService executor) {
         try (executor) {
             var latch = new CountDownLatch(1);
             Future<?> future = executor.submit(() -> { latch.await(); return null; });
             future.cancel(false);
             try {
                 assertTrue(future.state() == CANCELLED);
-                expectThrows(IllegalStateException.class, future::resultNow);
-                expectThrows(IllegalStateException.class, future::exceptionNow);
+                assertThrows(IllegalStateException.class, future::resultNow);
+                assertThrows(IllegalStateException.class, future::exceptionNow);
             } finally {
                 latch.countDown();
             }
@@ -132,16 +144,17 @@ public class DefaultMethods {
     /**
      * Test methods when the task has been cancelled (mayInterruptIfRunning=true)
      */
-    @Test(dataProvider = "executors")
-    public void testCancelledTask2(ExecutorService executor) {
+    @ParameterizedTest
+    @MethodSource("executors")
+    void testCancelledTask2(ExecutorService executor) {
         try (executor) {
             var latch = new CountDownLatch(1);
             Future<?> future = executor.submit(() -> { latch.await(); return null; });
             future.cancel(true);
             try {
                 assertTrue(future.state() == CANCELLED);
-                expectThrows(IllegalStateException.class, future::resultNow);
-                expectThrows(IllegalStateException.class, future::exceptionNow);
+                assertThrows(IllegalStateException.class, future::resultNow);
+                assertThrows(IllegalStateException.class, future::exceptionNow);
             } finally {
                 latch.countDown();
             }
@@ -152,46 +165,46 @@ public class DefaultMethods {
      * Test CompletableFuture with the task has not completed.
      */
     @Test
-    public void testCompletableFuture1() {
+    void testCompletableFuture1() {
         var future = new CompletableFuture<String>();
         assertTrue(future.state() == RUNNING);
-        expectThrows(IllegalStateException.class, future::resultNow);
-        expectThrows(IllegalStateException.class, future::exceptionNow);
+        assertThrows(IllegalStateException.class, future::resultNow);
+        assertThrows(IllegalStateException.class, future::exceptionNow);
     }
 
     /**
      * Test CompletableFuture with the task that completed with result.
      */
     @Test
-    public void testCompletableFuture2() {
+    void testCompletableFuture2() {
         var future = new CompletableFuture<String>();
         future.complete("foo");
         assertTrue(future.state() == SUCCESS);
-        assertEquals(future.resultNow(), "foo");
-        expectThrows(IllegalStateException.class, future::exceptionNow);
+        assertEquals("foo", future.resultNow());
+        assertThrows(IllegalStateException.class, future::exceptionNow);
     }
 
     /**
      * Test CompletableFuture with the task that completed with null.
      */
     @Test
-    public void testCompletableFuture3() {
+    void testCompletableFuture3() {
         var future = new CompletableFuture<String>();
         future.complete(null);
         assertTrue(future.state() == SUCCESS);
-        assertEquals(future.resultNow(), null);
-        expectThrows(IllegalStateException.class, future::exceptionNow);
+        assertNull(future.resultNow());
+        assertThrows(IllegalStateException.class, future::exceptionNow);
     }
 
     /**
      * Test CompletableFuture with the task that completed with exception.
      */
     @Test
-    public void testCompletableFuture4() {
+    void testCompletableFuture4() {
         var future = new CompletableFuture<String>();
         future.completeExceptionally(new ArithmeticException());
         assertTrue(future.state() == FAILED);
-        expectThrows(IllegalStateException.class, future::resultNow);
+        assertThrows(IllegalStateException.class, future::resultNow);
         Throwable ex = future.exceptionNow();
         assertTrue(ex instanceof ArithmeticException);
     }
@@ -200,12 +213,12 @@ public class DefaultMethods {
      * Test CompletableFuture with the task that was cancelled.
      */
     @Test
-    public void testCompletableFuture5() {
+    void testCompletableFuture5() {
         var future = new CompletableFuture<String>();
         future.cancel(false);
         assertTrue(future.state() == CANCELLED);
-        expectThrows(IllegalStateException.class, future::resultNow);
-        expectThrows(IllegalStateException.class, future::exceptionNow);
+        assertThrows(IllegalStateException.class, future::resultNow);
+        assertThrows(IllegalStateException.class, future::exceptionNow);
     }
 
     /**
